search-codes/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-search-deploy
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-search-deploy
  template:
    metadata:
      labels:
        app: image-search-deploy
    spec:
      containers:
      - image: image-search-deploy
        name: image-search-deploy
        imagePullPolicy: IfNotPresent
        command: ["./serve"]
        ports:
        - containerPort: 8080
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
        startupProbe:
          tcpSocket:
            port: 8080
          failureThreshold: 30
          periodSeconds: 10
    
---

apiVersion: v1
kind: Service
metadata:
  name: image-search-deploy
  labels:
    app: image-search-deploy
  namespace: default
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: image-search-deploy
    
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: image-search-deploy
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: image-search-deploy
            port:
              number: 8080
